update css to prevent overlapping

--- a/style/battle-search.css
+++ b/style/battle-search.css
@@ -173,7 +173,7 @@
 .dexlist .pokemonnamecol {
 	padding-top: 6px;
 	height: 23px;
-	width: 127px;
+	width: 144px;
 	color: #000000;
 	font-size: 10pt;
 	white-space: nowrap;
